{
  "version": 4,
  "terraform_version": "1.5.7",
  "serial": 40,
  "lineage": "3459a9d9-0c38-684c-7c36-3c186659654b",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "dedicated_nodes",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0b2c0821853f5c7be",
            "arn": "arn:aws:ec2:us-west-2:387198252553:instance/i-036550b920d286fcb",
            "associate_public_ip_address": true,
            "availability_zone": "us-west-2a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "cpu_threads_per_core": 2,
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "host_id": "h-02a4c4706df84dbcf",
            "id": "i-036550b920d286fcb",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "m5.large",
            "ipv6_address_count": 0,
            "key_name": "k8s-demo-key",
            "launch_template": [
              {
                "id": "lt-08d90e9dbdac8a6ab",
                "name": "k8s-dedicated-20251005190825677700000007",
                "version": "$Latest"
              }
            ],
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-028ddcecf4df3218e",
            "private_dns": "ip-10-0-1-137.us-west-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.137",
            "public_dns": "ec2-35-91-75-188.us-west-2.compute.amazonaws.com",
            "public_ip": "35.91.75.188",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0bf5e77b56ea2595f",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-02eadbad5f33b840f",
            "tags": {
              "Name": "k8s-dedicated-node-1",
              "Type": "dedicated",
              "Zone": "us-west-2a",
              "kubernetes.io/cluster/dedicated-hosts-demo": "owned"
            },
            "tags_all": {
              "Name": "k8s-dedicated-node-1",
              "Type": "dedicated",
              "Zone": "us-west-2a",
              "kubernetes.io/cluster/dedicated-hosts-demo": "owned"
            },
            "tenancy": "host",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-007aacb1475311353"
            ]
          },
          "dependencies": [
            "aws_ec2_host.dedicated",
            "aws_key_pair.k8s",
            "aws_launch_template.dedicated_nodes",
            "aws_security_group.k8s_nodes",
            "aws_subnet.public",
            "data.aws_ami.amazon_linux",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0b2c0821853f5c7be",
            "arn": "arn:aws:ec2:us-west-2:387198252553:instance/i-01dda0790c2e332dc",
            "associate_public_ip_address": true,
            "availability_zone": "us-west-2b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "cpu_threads_per_core": 2,
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "host_id": "h-0d97344af81ae4c12",
            "id": "i-01dda0790c2e332dc",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "m5.large",
            "ipv6_address_count": 0,
            "key_name": "k8s-demo-key",
            "launch_template": [
              {
                "id": "lt-08d90e9dbdac8a6ab",
                "name": "k8s-dedicated-20251005190825677700000007",
                "version": "$Latest"
              }
            ],
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0d0f7124b3472e260",
            "private_dns": "ip-10-0-2-204.us-west-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.2.204",
            "public_dns": "ec2-44-244-11-225.us-west-2.compute.amazonaws.com",
            "public_ip": "44.244.11.225",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-00462de2534ffa8e9",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0fbdf7adf49497561",
            "tags": {
              "Name": "k8s-dedicated-node-2",
              "Type": "dedicated",
              "Zone": "us-west-2b",
              "kubernetes.io/cluster/dedicated-hosts-demo": "owned"
            },
            "tags_all": {
              "Name": "k8s-dedicated-node-2",
              "Type": "dedicated",
              "Zone": "us-west-2b",
              "kubernetes.io/cluster/dedicated-hosts-demo": "owned"
            },
            "tenancy": "host",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-007aacb1475311353"
            ]
          },
          "dependencies": [
            "aws_ec2_host.dedicated",
            "aws_key_pair.k8s",
            "aws_launch_template.dedicated_nodes",
            "aws_security_group.k8s_nodes",
            "aws_subnet.public",
            "data.aws_ami.amazon_linux",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "default_nodes",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0b2c0821853f5c7be",
            "arn": "arn:aws:ec2:us-west-2:387198252553:instance/i-01c1c2927ebc38fb8",
            "associate_public_ip_address": true,
            "availability_zone": "us-west-2a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "cpu_threads_per_core": 2,
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-01c1c2927ebc38fb8",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "m5.large",
            "ipv6_address_count": 0,
            "key_name": "k8s-demo-key",
            "launch_template": [
              {
                "id": "lt-0bbf5ac4eb4499580",
                "name": "k8s-default-20251005190825677600000005",
                "version": "$Latest"
              }
            ],
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-02712226c19e1bddf",
            "private_dns": "ip-10-0-1-119.us-west-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.119",
            "public_dns": "ec2-54-188-31-138.us-west-2.compute.amazonaws.com",
            "public_ip": "54.188.31.138",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0841092b42d132ed3",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-02eadbad5f33b840f",
            "tags": {
              "Name": "k8s-default-node-1",
              "Type": "default",
              "Zone": "us-west-2a",
              "kubernetes.io/cluster/dedicated-hosts-demo": "owned"
            },
            "tags_all": {
              "Name": "k8s-default-node-1",
              "Type": "default",
              "Zone": "us-west-2a",
              "kubernetes.io/cluster/dedicated-hosts-demo": "owned"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-007aacb1475311353"
            ]
          },
          "dependencies": [
            "aws_key_pair.k8s",
            "aws_launch_template.default_nodes",
            "aws_security_group.k8s_nodes",
            "aws_subnet.public",
            "data.aws_ami.amazon_linux",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0b2c0821853f5c7be",
            "arn": "arn:aws:ec2:us-west-2:387198252553:instance/i-00dd4c02311e42b3f",
            "associate_public_ip_address": true,
            "availability_zone": "us-west-2b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "cpu_threads_per_core": 2,
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-00dd4c02311e42b3f",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "m5.large",
            "ipv6_address_count": 0,
            "key_name": "k8s-demo-key",
            "launch_template": [
              {
                "id": "lt-0bbf5ac4eb4499580",
                "name": "k8s-default-20251005190825677600000005",
                "version": "$Latest"
              }
            ],
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0c14e5f9c39e912b3",
            "private_dns": "ip-10-0-2-179.us-west-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.2.179",
            "public_dns": "ec2-50-112-193-80.us-west-2.compute.amazonaws.com",
            "public_ip": "50.112.193.80",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-065143168e2ccc514",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0fbdf7adf49497561",
            "tags": {
              "Name": "k8s-default-node-2",
              "Type": "default",
              "Zone": "us-west-2b",
              "kubernetes.io/cluster/dedicated-hosts-demo": "owned"
            },
            "tags_all": {
              "Name": "k8s-default-node-2",
              "Type": "default",
              "Zone": "us-west-2b",
              "kubernetes.io/cluster/dedicated-hosts-demo": "owned"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-007aacb1475311353"
            ]
          },
          "dependencies": [
            "aws_key_pair.k8s",
            "aws_launch_template.default_nodes",
            "aws_security_group.k8s_nodes",
            "aws_subnet.public",
            "data.aws_ami.amazon_linux",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:387198252553:internet-gateway/igw-0452b55564f953f21",
            "id": "igw-0452b55564f953f21",
            "owner_id": "387198252553",
            "tags": {
              "Name": "dedicated-hosts-igw"
            },
            "tags_all": {
              "Name": "dedicated-hosts-igw"
            },
            "vpc_id": "vpc-03b74b26ac3b6218b"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:387198252553:route-table/rtb-0da9df7105d8a5d69",
            "id": "rtb-0da9df7105d8a5d69",
            "owner_id": "387198252553",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0452b55564f953f21",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "public-rt"
            },
            "tags_all": {
              "Name": "public-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-03b74b26ac3b6218b"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.main",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0b301fa368302139a",
            "route_table_id": "rtb-0da9df7105d8a5d69",
            "subnet_id": "subnet-02eadbad5f33b840f"
          },
          "dependencies": [
            "aws_internet_gateway.main",
            "aws_route_table.public",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0a1f943113fd0fb18",
            "route_table_id": "rtb-0da9df7105d8a5d69",
            "subnet_id": "subnet-0fbdf7adf49497561"
          },
          "dependencies": [
            "aws_internet_gateway.main",
            "aws_route_table.public",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "k8s_nodes",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:387198252553:security-group/sg-007aacb1475311353",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-007aacb1475311353",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "10.0.0.0/16"
                ],
                "description": "",
                "from_port": 6443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 6443
              },
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": true,
                "to_port": 65535
              },
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 10250,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": true,
                "to_port": 10250
              }
            ],
            "name": "k8s-nodes-20251005190822961000000003",
            "name_prefix": "k8s-nodes-",
            "owner_id": "387198252553",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "k8s-nodes-sg"
            },
            "tags_all": {
              "Name": "k8s-nodes-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-03b74b26ac3b6218b"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:387198252553:subnet/subnet-02eadbad5f33b840f",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2a",
            "availability_zone_id": "usw2-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-02eadbad5f33b840f",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "387198252553",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "public-subnet-1",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "Name": "public-subnet-1",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-03b74b26ac3b6218b"
          },
          "dependencies": [
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:387198252553:subnet/subnet-0fbdf7adf49497561",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2b",
            "availability_zone_id": "usw2-az2",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0fbdf7adf49497561",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "387198252553",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "public-subnet-2",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "Name": "public-subnet-2",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-03b74b26ac3b6218b"
          },
          "dependencies": [
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:387198252553:vpc/vpc-03b74b26ac3b6218b",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0837fd646a4f9be3a",
            "default_route_table_id": "rtb-0eeb41943bbc41849",
            "default_security_group_id": "sg-0b7ea0863e332c242",
            "dhcp_options_id": "dopt-0b3e9eabf11ef0f8b",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-03b74b26ac3b6218b",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0eeb41943bbc41849",
            "owner_id": "387198252553",
            "tags": {
              "Name": "dedicated-hosts-vpc"
            },
            "tags_all": {
              "Name": "dedicated-hosts-vpc"
            }
          }
        }
      ]
    }
  ]
}